# fmmtl_windows

./: CMakeLists.txt
examples/: error_barycentric.cpp  error_biot.cpp  error_img.cpp  error_laplace.cpp  kNN.cpp  scaling.cpp  thomson.cpp
experimental/: test_plr.cpp
fmmtl/: Direct.hpp  Expansion.hpp  FMMOptions.hpp  config.hpp
fmmtl/dispatch/: BatchFar.hpp  BatchNear.hpp  S2T.hpp
fmmtl/dispatch/S2T/: S2T_Blocked_CSR_cuda.inl  S2T_Compressed.hpp  S2T_Compressed_cpp.inl  S2T_Compressed_cu.inl
fmmtl/executor/: EvalLists.hpp
fmmtl/meta/: integer_sequence.hpp  kernel_traits.hpp  math.hpp  range.hpp
fmmtl/numeric/: norm.hpp
fmmtl/traversal/: Downward.hpp
fmmtl/tree/: BallTree.hpp  NDTree.hpp
fmmtl/tree/util/: CountedProxyIterator.hpp
kernel/: Barycentric.kern  BiotSavart.kern  Dipole.kern  DipoleFieldSpherical.hpp  ExpKernel.kern  KernelSkeleton.kern  Laplace.kern  LaplaceSpherical.hpp  UnitKernel.kern
kernel/Util/: Chebyshev.hpp  GradedPolynomial.hpp  SphericalMultipole3D.hpp  constexpr_math.hpp
unit_tests/: compiles.cpp  correctness.cu  dual_correctness.cu  error_Dipole.cu  multi_level.cu  single_level.cpp  test_balltree.cpp  test_bbfmm.cpp  test_direct.cpp  test_expansion.cpp  test_s2t.cu
